dataset1235/2025-2/805158916/users/3688932496/executions/1584167357_1559799913.log
== RUN (2025-08-27 14:01:36)
-- CODE: 
numero = input()
quadrado = (numero * 2)
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
22
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
00
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
10001000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
-10-10
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
-15-15
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
120120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:03:57)
-- CODE: 
numero = int(input("Digite um valor:"))
quadrado = ( numero ** 2)
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digite um valor:4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digite um valor:0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digite um valor:1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digite um valor:100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digite um valor:225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digite um valor:14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:03:49)
-- CODE: 
numero = int(input("Digite um valor:"))
quadrado = ( numero ** 2)
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digite um valor:4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digite um valor:0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digite um valor:1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digite um valor:100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digite um valor:225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digite um valor:14400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:03:35)
-- CODE: 
numero = int(input("Digite um valor:")
quadrado = ( numero ** 2)
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um valor:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um valor:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um valor:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um valor:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um valor:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um valor:")
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:01:17)
-- CODE: 
numero = input()
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
22
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
00
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
10001000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
-10-10
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
-15-15
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
120120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:02:26)
-- CODE: 
numero = input()
quadrado = (numero ^ 2)
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (numero ^ 2)
                ~~~~~~~^~~
TypeError: unsupported operand type(s) for ^: 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (numero ^ 2)
                ~~~~~~~^~~
TypeError: unsupported operand type(s) for ^: 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (numero ^ 2)
                ~~~~~~~^~~
TypeError: unsupported operand type(s) for ^: 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (numero ^ 2)
                ~~~~~~~^~~
TypeError: unsupported operand type(s) for ^: 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (numero ^ 2)
                ~~~~~~~^~~
TypeError: unsupported operand type(s) for ^: 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (numero ^ 2)
                ~~~~~~~^~~
TypeError: unsupported operand type(s) for ^: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
